2004-01-15  JP Rosevear <jpr@ximian.com>

	* e-config-upgrade.c: remove calendar and task keys for upgrade,
	its done in the calendar now

2004-01-15  Rodrigo Moya <rodrigo@ximian.com>

	* e-shell-view-menu.c: added ForgetPasswords menu item.
	(command_forget_passwords): callback for the new menu item.

	* e-shell-window-commands.c: (command_forget_passwords): ditto.

2004-01-15  JP Rosevear <jpr@ximian.com>

	* main.c (kill_dataserver): kill the correct binary, tidy includes

2004-01-15  JP Rosevear <jpr@ximian.com>

	* main.c (detect_version): move version detection here

	* e-config-upgrade.c: remove it from here; clean out all the
	mailer and bonobo conf conversion stuff, its been moved to the
	mailer and e-util

	* e-config-upgrade.h: remove proto

2004-01-15  Not Zed  <NotZed@Ximian.com>

	* e-config-upgrade.c (e_upgrade_detect_version): fix the check for
	~/evolution being a directory.

2004-01-13  JP Rosevear <jpr@ximian.com>

	* main.c (attempt_upgrade): detect the version more completely
	with the new util routine
	(main): don't upgrade the config db here

	* e-shell.h: update proto

	* e-shell.c (e_shell_attempt_upgrade): take the current version as
	numerical params

	* e-config-upgrade.h: update prototypes

	* e-config-upgrade.c (e_config_upgrade): remove version detection
	and saving code
	(e_upgrade_detect_version): routine to do the version detection

	* e-config-upgrade.c: drop my-evolution upgrade code

2004-01-12  JP Rosevear <jpr@ximian.com>

	* Makefile.am: use our libs

2004-01-12  JP Rosevear <jpr@ximian.com>

	* evolution-test-component.[hc]: Complete rewrite to match current
	component api

	* Makefile.am: conditionally build the test component
	
2004-01-11  JP Rosevear <jpr@ximian.com>

	* e-sidebar.c (button_new): track hbox and label widget
	(button_free): unref them
	(do_layout_text_buttons): layout buttons with text
	(do_layout_icon_buttons): layout icon only buttons
	(do_layout): layout based on mode